--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
-    "e2e": "yarn exec cypress install && yarn exec grafana-e2e run",
-    "e2e:update": "yarn exec cypress install && yarn exec grafana-e2e run --update-screenshots",
+    "e2e": "playwright test",    
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "yarn run lint --fix",    
+    "lint:fix": "yarn run lint --fix",
     "server": "docker-compose up --build",
-    "sign": "npx --yes @grafana/sign-plugin@latest",    
+    "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
     "typecheck": "tsc --noEmit"
@@ -24,10 +23,10 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@grafana/e2e": "10.3.3",
-    "@grafana/e2e-selectors": "10.3.3",
     "@grafana/eslint-config": "^7.0.0",
+    "@grafana/plugin-e2e": "^1.0.1",
     "@grafana/tsconfig": "^1.2.0-rc1",
+    "@playwright/test": "^1.41.2",
     "@swc/core": "^1.3.90",
     "@swc/helpers": "^0.5.0",
     "@swc/jest": "^0.2.26",
@@ -37,7 +36,7 @@
     "@types/lodash": "^4.14.194",
     "@types/node": "^20.8.7",
     "@types/react-router-dom": "^5.2.0",
-    "@types/testing-library__jest-dom": "5.14.8",    
+    "@types/testing-library__jest-dom": "5.14.8",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
     "eslint-plugin-deprecation": "^2.0.0",
@@ -65,10 +64,10 @@
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "~7.0.0",
+    "@grafana/data": "10.3.3",
     "@grafana/runtime": "10.3.3",
     "@grafana/schema": "10.3.3",
-    "@grafana/ui": "~7.0.0",
+    "@grafana/ui": "10.3.3",
     "react": "18.2.0",
     "react-card-flip": "^1.1.5",
     "react-dom": "18.2.0",
