--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
-    "e2e": "playwright test",    
+    "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "yarn run lint --fix",
     "server": "docker-compose up --build",
@@ -24,11 +24,11 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@grafana/eslint-config": "^7.0.0",
-    "@grafana/plugin-e2e": "^1.0.1",
-    "@grafana/tsconfig": "^1.2.0-rc1",
+    "@grafana/plugin-e2e": "^1.2.0",
+    "@grafana/tsconfig": "^1.3.0-rc1",
     "@playwright/test": "^1.41.2",
-    "@swc/core": "^1.3.90",
-    "@swc/helpers": "^0.5.0",
+    "@swc/core": "1.4.1",
+    "@swc/helpers": "0.5.6",
     "@swc/jest": "^0.2.26",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.0.0",
@@ -60,14 +60,14 @@
     "webpack-livereload-plugin": "^3.0.2"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=20"
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "10.3.3",
-    "@grafana/runtime": "10.3.3",
-    "@grafana/schema": "10.3.3",
-    "@grafana/ui": "10.3.3",
+    "@grafana/data": "10.0.13",
+    "@grafana/runtime": "10.0.13",
+    "@grafana/schema": "10.4.2",
+    "@grafana/ui": "10.0.13",
     "react": "18.2.0",
     "react-card-flip": "^1.1.5",
     "react-dom": "18.2.0",
