--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "yarn run lint --fix",
+    "lint:fix": "npm run lint -- --fix",
     "server": "docker-compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "prettier": "prettier --write"
   },
   "repository": {
     "type": "git",
@@ -46,6 +47,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "lefthook": "^1.6.12",
     "prettier": "^2.8.7",
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "1.63.2",
@@ -69,9 +71,8 @@
     "@grafana/schema": "10.4.2",
     "@grafana/ui": "10.0.13",
     "react": "18.2.0",
-    "react-card-flip": "^1.1.5",
+    "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
-  },
-  "packageManager": "yarn@1.22.22"
+  }  
 }
