--- a/lefthook.yml
+++ b/lefthook.yml
@@ -39,6 +39,8 @@ pre-commit:
     eslint:
       glob: "*.{js,ts,jsx,tsx}"
       run: npm run lint {staged_files}
+      stage_fixed: true
     prettier:
       glob: "*.{js,ts,jsx,tsx,css,scss,json,md}"
       run: npm run prettier --check {staged_files}    
+      stage_fixed: true
