--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,14 +41,14 @@ jobs:
         with:
           node-version-file: .nvmrc
 
-      - name: Install yarn dependencies
-        run: yarn install
+      - name: Install dependencies
+        run: npm ci
 
       - name: Build frontend
-        run: yarn build
+        run: npm run build
 
       - name: Install Playwright Browsers
-        run: yarn playwright install --with-deps
+        run: npm run playwright install --with-deps
 
       - name: Start Grafana
         run: |
@@ -65,7 +65,7 @@ jobs:
 
       - name: Run Playwright tests
         id: run-tests
-        run: yarn playwright test
+        run: npm run playwright test
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
