--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -40,6 +40,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
+          cache: 'npm'
 
       - name: Install dependencies
         run: npm ci
@@ -48,7 +49,7 @@ jobs:
         run: npm run build
 
       - name: Install Playwright Browsers
-        run: npm run playwright install --with-deps
+        run: npx playwright install --with-deps
 
       - name: Start Grafana
         run: |
