--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Run Playwright tests
         id: run-tests
-        run: npm run playwright test
+        run: npx playwright test
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
