--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "npm run lint -- --fix",
+    "lint:fix": "yarn lint --fix",
     "server": "docker-compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
@@ -74,5 +74,5 @@
     "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
     "tslib": "2.5.3"
-  }  
+  }
 }
