--- a/cspell.config.json
+++ b/cspell.config.json
@@ -1,5 +1,18 @@
 {
   "ignorePaths": ["node_modules/**", "dist/**", "src/external/**", "provisioning/**", "package.json"],
-  "words": ["grafana", "datasource", "datasources", "rgba", "countup", "Themeable", "Unthemed", "testid"],
+  "words": [
+    "grafana",
+    "datasource",
+    "datasources",
+    "rgba",
+    "countup",
+    "Themeable",
+    "Unthemed",
+    "testid",
+    "vonage",
+    "maintainership",
+    "crits",
+    "logmin"
+  ],
   "ignoreRegExpList": ["@[\\w]+"]
 }
