--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,14 +7,14 @@ services:
     build:
       context: ./.config
       args:
-        grafana_image: ${GRAFANA_IMAGE:-grafana-enterprise}
-        grafana_version: ${GRAFANA_VERSION:-10.3.5}
+        grafana_image: ${GRAFANA_IMAGE:-grafana}
+        grafana_version: ${GRAFANA_VERSION:-latest}
         development: ${DEVELOPMENT:-true}
     ports:
       - 3000:3000/tcp
       - 2345:2345/tcp # delve
     volumes:
-      - ./dist:/var/lib/grafana/plugins/vonage-status-panel-react      
+      - ./dist:/var/lib/grafana/plugins/vonage-status-panel-react
       - ./provisioning:/etc/grafana/provisioning
       - .:/root/vonage-status-panel
 
