--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vonage-status-panel",
   "private": true,
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Status Panel for Grafana",
   "scripts": {
     "build": "webpack -c ./.config/webpack/webpack.config.ts --env production",
@@ -9,7 +9,7 @@
     "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
     "lint:fix": "yarn lint --fix",
-    "server": "docker-compose up --build",
+    "server": "docker compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
