--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -154,7 +154,7 @@ jobs:
           cache: 'yarn'
 
       - name: Install dev dependencies
-        run: yarn ci
+        run: yarn install
 
       - name: Start Grafana
         run: |
