--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "webpack -w -c ./.config/webpack/webpack.config.ts --env development",
     "e2e": "playwright test",
     "lint": "eslint --cache --ignore-path ./.gitignore --ext .js,.jsx,.ts,.tsx .",
-    "lint:fix": "yarn lint --fix",
-    "server": "docker-compose up --build",
+    "lint:fix": "yarn run lint --fix",
+    "server": "docker compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest",
     "test": "jest --watch --onlyChanged",
     "test:ci": "jest --passWithNoTests --maxWorkers 4",
@@ -25,8 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.21.4",
     "@grafana/eslint-config": "^7.0.0",
-    "@grafana/plugin-e2e": "^1.2.0",
-    "@grafana/tsconfig": "^1.3.0-rc1",
+    "@grafana/plugin-e2e": "^1.11.2",
+    "@grafana/tsconfig": "^2.0.0",
     "@playwright/test": "^1.41.2",
     "@swc/core": "1.4.1",
     "@swc/helpers": "0.5.6",
@@ -54,22 +54,27 @@
     "sass-loader": "13.3.1",
     "style-loader": "3.3.3",
     "swc-loader": "^0.2.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "4.8.4",
-    "webpack": "^5.86.0",
+    "typescript": "5.5.4",
+    "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4",
-    "webpack-livereload-plugin": "^3.0.2"
+    "webpack-livereload-plugin": "^3.0.2",
+    "imports-loader": "^5.0.0",
+    "semver": "^7.6.3",
+    "terser-webpack-plugin": "^5.3.10",
+    "webpack-subresource-integrity": "^5.1.0",
+    "webpack-virtual-modules": "^0.6.2"
   },
   "engines": {
     "node": ">=20"
   },
   "dependencies": {
     "@emotion/css": "11.10.6",
-    "@grafana/data": "10.0.13",
-    "@grafana/runtime": "10.0.13",
-    "@grafana/schema": "10.4.2",
-    "@grafana/ui": "10.0.13",
+    "@grafana/data": "^11.3.0",
+    "@grafana/runtime": "^11.3.0",
+    "@grafana/schema": "^11.3.0",
+    "@grafana/ui": "^11.3.0",
     "react": "18.2.0",
     "react-card-flip": "^1.2.2",
     "react-dom": "18.2.0",
