Exclude react from all npm dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -15,7 +15,7 @@
     },
     {
       "matchManagers": ["npm"],
-      "excludePackagePatterns": ["^@grafana/"],
+      "excludePackagePatterns": ["^@grafana/", "^react$", "^react-dom$", "^@types/react$", "^@types/react-dom$"],
       "groupName": "npm dependencies",
       "description": "Group all other npm dependencies"
     },
